# vertigo-lora

./: .gitignore  README.md  pyproject.toml
configs/: 2b.yaml  35b.yaml  4b-128gb.yaml  4b-8bit-128gb.yaml  4b.yaml  9b.yaml  curation.yaml
data/eval/: METHODOLOGY.md  RESULTS_INDEX.json  benchmark.jsonl
data/raw/: PUBLIC_DATA.md  api_docs.jsonl  bugfix_pairs.jsonl  composition_tasks.jsonl  critic_repair.jsonl  devforum_qa.jsonl  embodiment_gameplay.jsonl  evolved.jsonl  gameplay_sessions.jsonl  luau_tests.jsonl  mcp_tools.jsonl  opengameeval_tasks.jsonl  rejection_sampled.jsonl  roblox_creator_docs.jsonl  roblox_ts_patterns.jsonl  rojo_architecture.jsonl  (+6 more)
docs/: 9b-experiment-plan.md  training-log.md
scripts/: analyze_dataset.py  analyze_run.py  api.py  auto_train.sh  bootstrap_abraham.sh  build_mcp_examples.py  capture_gameplay.py  create_linear_issue.py  curate_dataset.py  distill_from_teacher.py  evolve_examples.py  extract_api_docs.py  extract_codebase.py  extract_codebase_granular.py  extract_creator_docs.py  extract_devforum.py  extract_embodiment.py  extract_opengameeval.py  extract_oss_roblox.py  extract_source_repos.py  generate_bugfix.py  generate_critic_data.py  generate_magpie.py  generate_mcp_traces.py  generate_rejection_sampling.py  generate_star.py  generate_synthetic.py  generate_tool_calling_sft.py  log_run.py  merge_dataset.py  presplit_sequences.py  promote_adapter.py  prompts.py  record_mcp_trajectories.py  retrain.sh  run_benchmark.py  run_opengameeval.py  schemas.py  scoring.py  serve_adapter.sh  (+4 more)
site/: index.html
tests/: test_pipeline.py
(+9 files in other folders)
